--- a/code/API_definitions/sim_swap.yaml
+++ b/code/API_definitions/sim_swap.yaml
@@ -193,9 +193,9 @@ components:
             period within the provided age.
     PhoneNumber:
       type: string
-      pattern: '^\+?[0-9]{5,15}$'
+      pattern: '^\+[1-9][0-9]{4,14}$'
       example: '+346661113334'
-      description: Subscriber number in E.164 format (starting with country code). Optionally prefixed with '+'.
+      description: A public identifier addressing a telephone subscription. In mobile networks it corresponds to the MSISDN (Mobile Station International Subscriber Directory Number). In order to be globally unique it has to be formatted in international format, according to E.164 standard, prefixed with '+'.
     ErrorInfo:
       type: object
       required:
