--- a/code/API_definitions/sim-swap-subscriptions.yaml
+++ b/code/API_definitions/sim-swap-subscriptions.yaml
@@ -33,7 +33,7 @@ info:
     Note: Additionally to these list, ``org.camaraproject.sim-swap-subscriptions.v0.subscription-ends`` notification `types` is sent when the subscription ends.
     This notification does not require dedicated subscription.
     It is used when:
-      - the subscription expire time (optionally set by the requester) has been reached
+      - the subscription expiration time (optionally set by the requester) has been reached
       - the maximum number of subscription events (optionally set by the requester) has been reached
       - the API server has to stop sending notification prematurely
       - the Access Token sinkCredential expiration time (set by the requester) has been reached
